# PVUGC

./: .gitignore  Cargo.toml  DESIGN.md  PVUGC_complete_implementation.md  README.md  TECHNICAL.md  chatgpt5-prototype.md  test_crs_duality.rs
.github/workflows/: asan.yml
ark-groth16-pvugc/src/: lib.rs  prover.rs  pvugc_hook.rs
groth-sahai/: Cargo.toml  PVUGC_PROTOCOL.md  README.md
groth-sahai/src/: base_construction.rs  data_structures.rs  generator.rs  lib.rs  ppe_export.rs  pvugc.rs  rank_decomp.rs  statement.rs  verifier.rs
groth-sahai/src/prover/: commit.rs  prove.rs
groth_sahai/: Cargo.toml
groth_sahai/src/: generator.rs  kem_eval.rs  lib.rs  masked_eval.rs  verifier.rs
groth_sahai/tests/: prover.rs
roadmap/: PVUGC-hardening-plan.md
specs/: PVUGC.md
src/: api.rs  arming.rs  bls12381_ops.rs  coeff_recorder.rs  ctx.rs  decap.rs  deterministic_rho.rs  dlrep.rs  groth16_wrapper.rs  gs_commitments.rs  gs_kem_eval.rs  gs_kem_helpers.rs  kem.rs  lib.rs  poce.rs  ppe.rs  schnorr.rs
tests/: gs_diag.rs  gs_verifier_parity.rs  test_gs_unmasked_diag.rs  test_multi_proof_consistency.rs  test_no_proof_needed.rs  test_one_sided_pvugc_e2e.rs  test_one_sided_security.rs  test_pvugc.rs  test_pvugc_and2.rs  test_pvugc_masks.rs  test_recorder_works.rs  test_security_assumptions.rs  test_two_1x1_manual.rs  test_two_1x1_ppe.rs
